[gd_scene load_steps=17 format=3 uid="uid://vmt2i16m08vg"]

[ext_resource type="Script" uid="uid://g7168xrdcubv" path="res://Global_Scenes/Debug/Scripts/Debug.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://pu7yiomgntci" path="res://Scenes/Window/Window_Base.tscn" id="1_uhri6"]
[ext_resource type="PackedScene" uid="uid://dd16bj5kq7q0m" path="res://Global_Scenes/Debug/General/General.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dgmoonixg0fmj" path="res://Global_Scenes/Debug/Teleport_Map/Teleport_Map.tscn" id="2_5ypah"]
[ext_resource type="PackedScene" uid="uid://cdi2ojm12xq7a" path="res://Global_Scenes/Debug/Dialogues/Dialogues.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dlhj04ik0tiu3" path="res://Global_Scenes/Debug/Stater/Stater.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cpjbiihii7on6" path="res://Global_Scenes/Debug/Cutscenes/Cutscenes.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://esqnk2qbp34y" path="res://Global_Scenes/Debug/Commands_List/Commands_List.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://c5r7lkughrks5" path="res://Global_Scenes/Debug/Command_Edit/Command_Edit.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://drv0erjym1e5s" path="res://Global_Scenes/Debug/Fix_Warnings/Fix_Warnings.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cv8210pw7u7mb" path="res://Global_Scenes/Debug/Databases/Databases.tscn" id="9_lb7dy"]
[ext_resource type="PackedScene" uid="uid://btan7on4dbplb" path="res://Global_Scenes/Debug/Scenes/Attr_Select/Attr_Select.tscn" id="11_v454i"]
[ext_resource type="PackedScene" uid="uid://bowjlagramq2y" path="res://Global_Scenes/Debug/Scenes/Loc_Editor/Loc_Editor.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://oar53dtuvjd1" path="res://Global_Scenes/Messages/Messages.tscn" id="14_u614u"]
[ext_resource type="Theme" uid="uid://pr4yljlh62sp" path="res://Global_Resources/Themes/Debug/Debug.tres" id="46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqcif"]
bg_color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="Debug" type="Node"]
process_mode = 3
script = ExtResource("1")

[node name="Teleport_Map" parent="." instance=ExtResource("2_5ypah")]

[node name="Window" parent="." instance=ExtResource("1_uhri6")]
canvas_item_default_texture_filter = 0
gui_embed_subwindows = true
title = "Debug"
initial_position = 1
size = Vector2i(1600, 900)
visible = false
_e_sub_world = false
_e_game_world = false
_e_resize = false
_e_activate_physics = false

[node name="Control" type="Control" parent="Window"]
light_mask = 8
visibility_layer = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("46")

[node name="Background" type="Panel" parent="Window/Control"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="TabContainer" parent="Window/Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nqcif")
tab_alignment = 1
current_tab = 1

[node name="General" parent="Window/Control/Menu" instance=ExtResource("2")]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Dialogues" parent="Window/Control/Menu" instance=ExtResource("3")]
layout_mode = 2
metadata/_tab_index = 1

[node name="Stater" parent="Window/Control/Menu" instance=ExtResource("4")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Cutscenes" parent="Window/Control/Menu" instance=ExtResource("5")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Localization" parent="Window/Control/Menu" instance=ExtResource("13")]
visible = false
layout_mode = 2
_e_mode = "Edit"
_e_show_return = false
metadata/_tab_index = 4

[node name="Databases" parent="Window/Control/Menu" instance=ExtResource("9_lb7dy")]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Commands_List" parent="Window" instance=ExtResource("7")]
visible = false

[node name="Command_Edit" parent="Window" instance=ExtResource("8")]
visible = false

[node name="Fix_Warnings" parent="Window" instance=ExtResource("9")]
visible = false

[node name="Attr_Select" parent="Window" instance=ExtResource("11_v454i")]
visible = false

[node name="Loc_Editor" type="CanvasLayer" parent="Window"]
layer = 3

[node name="Loc_Editor" parent="Window/Loc_Editor" instance=ExtResource("13")]
visible = false
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Messages" parent="Window" instance=ExtResource("14_u614u")]
